# OkayProject-public-

./: .env.example  .gitignore  AGENTS.md  README.md  render.yaml  studyforDataStructure
ai/: pyproject.toml  requirements.txt
ai/docs/: ai-model-summary.md  flood-v10-final-model-structure.md
ai/docs/api/: flood-risk-api-spec.md
ai/models/flood_xgb_v10_stage3_operational/: feature_schema.json  grid_static_runtime_summary.json  metrics.json  model_card.md  stage1_fold_0.ubj  stage1_fold_1.ubj  stage1_fold_2.ubj  stage1_fold_3.ubj  stage1_fold_5.ubj  stage1_fold_6.ubj  stage1_fold_8.ubj  stage2_fold_0.ubj  stage2_fold_1.ubj  stage2_fold_2.ubj  stage2_fold_4.ubj  stage2_fold_5.ubj  stage2_fold_6.ubj  stage2_fold_7.ubj  stage2_fold_8.ubj  stage3_fold_0.ubj  stage3_fold_1.ubj  stage3_fold_2.ubj  stage3_fold_3.ubj  stage3_fold_4.ubj  stage3_fold_5.ubj  stage3_fold_6.ubj  stage3_fold_7.ubj  stage3_fold_8.ubj  thresholds.json
ai/processed/flood_dataset_v1/: build_report.json  event_meta.parquet
ai/processed/flood_dataset_v2/: buffer_removed_index.parquet  build_report_v2.json
ai/reports/flood_data_quality_diagnostics/: crs_unit_sanity_check.json  data_quality_summary.md  evt2025_feature_comparison.csv  evt2025_score_diagnostic.csv  spatial_feature_sanity_check.csv  split_method_diagnostic.json
ai/reports/flood_v10_stage3_operational/: grid_static_runtime_summary.json  personalized_score_adjustment_policy.md  selected_policy.json  stage1_event_metrics.csv  stage1_metrics_report.json  stage1_metrics_report.md  thresholds.json  v10_packaging_summary.md  (+1 more)
(+125 files in other folders)
